--- a/app/assets/stylesheets/components/_user_deck_card.scss
+++ b/app/assets/stylesheets/components/_user_deck_card.scss
@@ -10,7 +10,9 @@
   rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
   transition: 0.2s;
   // transition-property: box-shadow;
-  box-shadow: -1rem 1rem #ccc;
+  box-shadow: 0 1rem #ccc;
+  top: -1rem;
+  // right: -1rem;
 }
 
 .user_deck_card_img {
