--- a/app/views/components/_user_deck_card.html.erb
+++ b/app/views/components/_user_deck_card.html.erb
@@ -23,7 +23,7 @@
   <div class="row g-0">
     <div class="col-md-4 d-none d-md-block"> <%# d-none d-md-block hides this div on screen sizes smaller than md %>
       <%# <img src="images/<%= deck.name.downcase %><%#.jpg" class="img-fluid rounded-start" alt="..."> %>
-      <%= image_tag "#{deck.name.downcase}.jpg", class: "card-img-top img-fluid rounded-start user_deck_card_img" %>
+      <%= image_tag "#{deck.name.downcase}.jpg", class: "img-fluid user_deck_card_img" %>
     </div>
     <div class="col-md-8">
       <div class="card-body">
