--- a/app/assets/stylesheets/components/_user_deck_card.scss
+++ b/app/assets/stylesheets/components/_user_deck_card.scss
@@ -5,15 +5,15 @@
   transition: 0.2s;
 }
 
-.user_deck_card:hover {
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-  rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-  transition: 0.2s;
-  // transition-property: box-shadow;
-  box-shadow: 0 1rem #ccc;
-  top: -1rem;
-  // right: -1rem;
-}
+// .user_deck_card:hover {
+//   // box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
+//   // rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+//   transition: 0.2s;
+//   // transition-property: box-shadow;
+//   box-shadow: 0 1rem #ccc;
+//   top: -1rem;
+//   // right: -1rem;
+// }
 
 .user_deck_card_img {
   // border-radius: 50%;
