--- a/app/views/user_decks/show.html.erb
+++ b/app/views/user_decks/show.html.erb
@@ -19,7 +19,7 @@
 
 <%= render "components/user_deck_show_pagination_buttons", user_deck: @user_deck, section: @section %>
 
-<table class="table table-sm table-hover table-responsive shadow">
+<table class="table table-sm table-hover table-responsive">
   <thead>
     <tr class="table-dark">
       <div class="collapse" id="ignore_card_collapse">
