--- a/app/views/components/_flashcard.html.erb
+++ b/app/views/components/_flashcard.html.erb
@@ -94,7 +94,7 @@
     </div>
   </div>
   <div>
-    <a class="btn btn-warning btn-lg w-100 shadow collapsed see-answer-button" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+    <a class="btn btn-warning btn-lg w-100 collapsed see-answer-button" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
       <div id="see-answer">
         See answer
       </div>
