--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -135,6 +135,18 @@ html, body {
   max-width: 700px;
 }
 
+#navbarToggleExternalContent {
+  // display: flex;
+  // height: 100vh;
+  // width: 250px;
+  // align-items: stretch;
+  // z-index: 1;
+  margin-top: 80px;
+  top: 0;
+  left: 0;
+}
+
+
 .footer {
   position: relative;
   margin-top: -150px; /* negative value of footer height */
